// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`logout should perform the needed actions for forced signing out 1`] = `
Array [
  Object {
    "type": "DELETE_PUSH_TOKEN_SUCCESS",
  },
  Object {
    "type": "app/LOGOUT",
  },
  Object {
    "actions": Array [
      Object {
        "params": Object {
          "forcedLogout": true,
        },
        "routeName": "nav/KEY_LOGIN",
        "type": "Navigation/NAVIGATE",
      },
    ],
    "index": 0,
    "type": "Navigation/RESET",
  },
]
`;

exports[`logout should perform the needed actions for signing out 1`] = `
Array [
  Object {
    "type": "DELETE_PUSH_TOKEN_SUCCESS",
  },
  Object {
    "type": "app/LOGOUT",
  },
  Object {
    "actions": Array [
      Object {
        "params": Object {},
        "routeName": "nav/LANDING",
        "type": "Navigation/NAVIGATE",
      },
    ],
    "index": 0,
    "type": "Navigation/RESET",
  },
]
`;
